Add Card to show Cases

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>React App</title>
+    <title>Covid 19 Tracker</title>
   </head>
   <body style="background-color: #eceff1">
     <noscript>You need to enable JavaScript to run this app.</noscript>
