Fix some grammer mistaks

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,17 @@
     />
     <title>Covid 19 Tracker</title>
   </head>
-  <body style="background-color: #eceff1">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      style="
+        width: 100%;
+        height: 100vh;
+        background-image: ;
+        background-image: url('https://images.unsplash.com/photo-1485288734756-0b31a0a31d95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+      "
+      id="root"
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
