--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
     <div
       style="
         width: 100%;
-        height: 100vh;
-        background-image: ;
+
+        background-image: inherit;
         background-image: url('https://images.unsplash.com/photo-1485288734756-0b31a0a31d95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
       "
       id="root"
