--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://lh3.googleusercontent.com/proxy/UF1ljvOLwAqeHpP7EfblxkqMZddHfGEZ4VV-LLyBYOqws3sc9Mt3-cgFOJJID7OAG8vOz9kw_Esz8eTdBkq7fBRDGA"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
